# ccc_solver_template

./: .gitignore  README.md  pyproject.toml  ruff.toml
codingcontest/: catcoder.py  next_level.py  submit_solutions.py  utils.py
codingcontest/template/: solve.py
