[tool.poetry]
name = "codingcontest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = ">=1.23.4"
pandas = ">=1.5.1"
tqdm = ">=4.64.1"
requests = ">=2.28.1"
loguru = ">=0.6.0"
python-dotenv = ">=0.21.0"
typer = ">=0.7.0"
gitpython = ">=3.1.29"

[tool.poetry.group.dev.dependencies]
black = ">=22.10.0"
jupyterlab = ">=3.5.0"
matplotlib = ">=3.6.2"
mypy = ">=0.982"
pdbpp = ">=0.10.3"
scikit-learn = ">=1.1.3"
seaborn = ">=0.12.1"
Flake8-pyproject = ">=1.1.0.post0"
types-requests = ">=2.28.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
next-level = 'codingcontest.next_level:run'
submit-solutions = 'codingcontest.submit_solutions:run'

[tool.black]
line-length = 99

[tool.mypy]
ignore_missing_imports = true
